# transformer_examples

./: .gitattributes  README.md  Resources.md
docs/: Bi-Encoders_vs_Cross-Encoders.docx  Bi-Encoders_vs_Cross-Encoders.pptx  Constructing_Custom_Logit_Function_with_pretrained_BERT_model.docx  Datasets_preparation_and_tokenization.docx  Deriving_and_Using_Embeddings_in_Custom_Logit_Function.docx  Diving_into_Attention_implementations_via_well_constructed_toy_examples.docx  Figures_on_Sentence_Embedding_Models.pptx  Fine_tuning_RoBerta_for_multi_class_classification.docx  Multi-Class_Classification_with_Bi-Encoder_Model.docx  Notes_on_Dense_Representations_by_Nils_Reimers.docx  Notes_on_Sentence_Embedding_Models_by_Nils_Reimers.docx  Obtain_the_embedding_vectors_and_implement_custom_loss_function_in_BERT.docx  SentenceTransformers copy.docx  SentenceTransformers.docx  Sentence_Transformers.docx  Transformer_Architecture.docx  Updating_a_tokens_embedding_with_the_hidden_state_of_its_prediction.docx  Using_BiEncoder_in_Mulitclass_Classification.docx  Why_When_and_How_to_Fine-Tune_a_Custom_Embedding_Model_Monigatti_2025.docx
docs/bert/: Fine_tuning_RoBERTa_for_Wine_click_prediction.docx
notebooks/: Process_Raw_SNLI_Dataset.ipynb  Process_SNLI_Dataset.ipynb
notebooks/attention/: encoder_decoder_with_attention_demo.ipynb  encoder_decoder_with_attention_demo.md
src/transformer-demo/: pyproject.toml
src/transformer-demo/transformer_demo/nlp/: DatasetsPackageInternals.md  SequenceClassificationTutorial.md  TokenizationInternals.md  sequence_classification.py
(+22 files in other folders)
