[tool.poetry]
name = "transformer-demo"
version = "0.1.0"
description = ""
authors = ["Dimitar Gueorguiev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.39.3"
torch = "^2.2.2"
matplotlib = "^3.8.4"
datasets = "^2.18.0"
torchvision = "^0.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
